--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <h1>Silk Tales</h1>
     <p>Hello World!
     <p>This is me
+    <p><img src="/public/img/bonnet.jpg" alt="My bonnet"/>
   </body>
 </html>
