Add basic CSS, fix orientation of bonnet image.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Silk Tales</title>
+    <link href="/public/main.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <h1>Silk Tales</h1>
